RESOLVED FIXED307081
[iOS] Focused element is not revealed if the focusRequiresStrongPasswordAssistance delegate takes too long
https://bugs.webkit.org/show_bug.cgi?id=307081
Summary [iOS] Focused element is not revealed if the focusRequiresStrongPasswordAssis...
Wenson Hsieh
Reported 2026-02-05 09:52:42 PST
Attachments
Wenson Hsieh
Comment 1 2026-02-05 10:07:44 PST
EWS
Comment 2 2026-02-05 13:45:20 PST
Committed 306897@main (f716dbb1d140): <https://commits.webkit.org/306897@main> Reviewed commits have been landed. Closing PR #57978 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.