Tools/TestRunnerShared/UIScriptContext/UIScriptController.h
@@ -286,6 +286,7 @@ public:
     virtual bool hasInputSession() const { notImplemented(); return false; }
 
     virtual void setHardwareKeyboardAttached(bool) { }
+    virtual void setShowKeyboardAfterElementFocusDelay(double) { }
 
     virtual void setKeyboardInputModeIdentifier(JSStringRef) { notImplemented(); }
     virtual void setFocusStartsInputSessionPolicy(JSStringRef) { notImplemented(); }
